--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 #main_background {
   	background-image: url("./PlantsHeader.jpg");
-  	height: 100vh;
+    height: 100vh;
 	margin: 0;
   	background-repeat: no-repeat;
-  	background-size: cover ;
+    background-size: cover ;
 }
 
 button, #quote {
@@ -14,6 +14,8 @@ button, #quote {
 h1{
     color: white;
     font-size: 10vw;
+    /* text-align: center;
+    transform: translate(0%, 35vh); */
     text-decoration: underline;
 
 }
@@ -96,4 +98,11 @@ h4{
     border: 3vw solid white;
     height: 40vh;
     padding-top: 12vh;
+}
+
+#frame {
+    height: 80vh;
+    list-style: none; 
+    overflow: scroll;
+    overflow-x: hidden;
 }
